<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FAQ">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/faq_page"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/faq_0"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/faq_2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/faq_3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/faq_4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/answer_0"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/answer_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/answer_3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/answer_4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <!--    <ScrollView-->
<!--        android:layout_width="379dp"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        app:layout_constraintBottom_toTopOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical" >-->

<!--                <TextView-->
<!--                    android:id="@+id/textView5"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="16dp"-->
<!--                    android:text="@string/faq_page"-->
<!--                    android:textSize="24sp"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

<!--                <TextView-->
<!--                    android:id="@+id/textView6"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="16dp"-->
<!--                    android:layout_marginLeft="16dp"-->
<!--                    android:layout_marginTop="16dp"-->
<!--                    android:layout_marginEnd="16dp"-->
<!--                    android:layout_marginRight="16dp"-->
<!--                    android:text="@string/faq_0"-->
<!--                    android:textSize="24sp"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/textView5" />-->

<!--                <TextView-->
<!--                    android:id="@+id/textView8"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="16dp"-->
<!--                    android:layout_marginLeft="16dp"-->
<!--                    android:layout_marginTop="16dp"-->
<!--                    android:layout_marginEnd="16dp"-->
<!--                    android:layout_marginRight="16dp"-->
<!--                    android:text="@string/faq_1"-->
<!--                    android:textSize="24sp"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintHorizontal_bias="0.0"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/textView10" />-->

<!--                <TextView-->
<!--                    android:id="@+id/textView9"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="16dp"-->
<!--                    android:layout_marginLeft="16dp"-->
<!--                    android:layout_marginTop="16dp"-->
<!--                    android:layout_marginEnd="16dp"-->
<!--                    android:layout_marginRight="16dp"-->
<!--                    android:text="@string/faq_2"-->
<!--                    android:textSize="24sp"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintHorizontal_bias="1.0"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/textView14" />-->

<!--                <TextView-->
<!--                    android:id="@+id/textView11"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="16dp"-->
<!--                    android:layout_marginLeft="16dp"-->
<!--                    android:layout_marginTop="16dp"-->
<!--                    android:layout_marginEnd="16dp"-->
<!--                    android:layout_marginRight="16dp"-->
<!--                    android:text="@string/faq_3"-->
<!--                    android:textSize="24sp"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintHorizontal_bias="0.0"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/textView15" />-->

<!--                <TextView-->
<!--                    android:id="@+id/textView12"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="16dp"-->
<!--                    android:layout_marginLeft="16dp"-->
<!--                    android:layout_marginTop="16dp"-->
<!--                    android:layout_marginEnd="16dp"-->
<!--                    android:layout_marginRight="16dp"-->
<!--                    android:text="@string/faq_4"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintHorizontal_bias="1.0"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/textView16" />-->

<!--                <TextView-->
<!--                    android:id="@+id/textView13"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="16dp"-->
<!--                    android:layout_marginLeft="16dp"-->
<!--                    android:layout_marginTop="16dp"-->
<!--                    android:layout_marginEnd="16dp"-->
<!--                    android:layout_marginRight="16dp"-->
<!--                    android:text="@string/faq_5"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/textView17" />-->

<!--                <TextView-->
<!--                    android:id="@+id/textView10"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="16dp"-->
<!--                    android:layout_marginLeft="16dp"-->
<!--                    android:layout_marginEnd="16dp"-->
<!--                    android:layout_marginRight="16dp"-->
<!--                    android:text="@string/answer_0"-->
<!--                    android:textSize="24sp"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/textView6" />-->

<!--                <TextView-->
<!--                    android:id="@+id/textView14"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="16dp"-->
<!--                    android:layout_marginLeft="16dp"-->
<!--                    android:layout_marginEnd="16dp"-->
<!--                    android:layout_marginRight="16dp"-->
<!--                    android:text="@string/answer_1"-->
<!--                    android:textSize="24sp"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/textView8" />-->

<!--                <TextView-->
<!--                    android:id="@+id/textView15"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="16dp"-->
<!--                    android:layout_marginLeft="16dp"-->
<!--                    android:layout_marginEnd="16dp"-->
<!--                    android:layout_marginRight="16dp"-->
<!--                    android:text="@string/answer_1"-->
<!--                    android:textSize="24sp"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/textView9" />-->

<!--                <TextView-->
<!--                    android:id="@+id/textView16"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="16dp"-->
<!--                    android:layout_marginLeft="16dp"-->
<!--                    android:layout_marginEnd="16dp"-->
<!--                    android:layout_marginRight="16dp"-->
<!--                    android:text="@string/answer_3"-->
<!--                    android:textSize="24sp"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/textView11" />-->

<!--                <TextView-->
<!--                    android:id="@+id/textView17"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="16dp"-->
<!--                    android:layout_marginLeft="16dp"-->
<!--                    android:layout_marginEnd="16dp"-->
<!--                    android:layout_marginRight="16dp"-->
<!--                    android:text="@string/answer_4"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/textView12" />-->

<!--                <TextView-->
<!--                    android:id="@+id/textView18"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="16dp"-->
<!--                    android:layout_marginLeft="16dp"-->
<!--                    android:layout_marginEnd="16dp"-->
<!--                    android:layout_marginRight="16dp"-->
<!--                    android:text="@string/answer_5"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent" />-->

<!--        </LinearLayout>-->


<!--    </ScrollView>-->
</androidx.constraintlayout.widget.ConstraintLayout>